fix overflow: hidden on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,17 +1,15 @@
-html {
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh; }
-
 body {
-  width: 100vw;
-  height: 100vh;
   box-sizing: border-box;
   font-family: "Francois One", sans-serif;
-  overflow: hidden;
   margin: 0;
   padding: 0;
   color: white; }
+
+.wrapper {
+  position: relative;
+  max-width: 100vw;
+  max-height: 100vh;
+  overflow: hidden; }
 
 *::-webkit-scrollbar {
   background-color: transparent; }
